--- a/launcher.html
+++ b/launcher.html
@@ -10,10 +10,14 @@
 <body>
   <div class="launcher-container">
     <h1>App Launcher</h1>
-    <button onclick="window.location.href='/JS-Console/index.html'">JS-Console</button>
-    <button onclick="window.location.href='https://example.com'">Example App</button>
-    <button onclick="window.location.href='https://github.com/criminalpear'">My GitHub</button>
-    <button onclick="alert('Coming soon!')">Future App</button>
+    <button onclick="window.location.href='https://criminalpear.github.io/JS-Console/'">JS-Console</button>
+    <button onclick="window.location.href='https://criminalpear.github.io/Flappy-Bird/'">Flappy Bird</button>
+    <button onclick="window.location.href='https://criminalpear.github.io/Bookmarklets/'">Bookmarklets</button>
+    <button onclick="window.location.href='https://criminalpear.github.io/Hextris/'">Hextris</button>
+    <button onclick="window.location.href='https://criminalpear.github.io/Pacman/'">Pacman</button>
+    <button onclick="window.location.href='https://criminalpear.github.io/Space-Invaders/'">Space Invaders</button>
+    <button onclick="window.location.href='https://criminalpear.github.io/HexGL-game/'">HexGL</button>
+    <button onclick="window.location.href='https://criminalpear.github.io/2048/'">2048</button>
   </div>
   <script src="/JS-Console/js/service-worker.js"></script>
 </body>
