--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
     </div>
   </nav>
   <div id="bookmarksBar"></div>
+  <h1>Welcome to the JavaScript Console v2.5 on GitHub Pages!</h1>
+  <p>Type "updates();" for what’s new or "list();" for all commands.</p>
   <div class="container">
     <div class="console-container">
       <div id="jsConsole" class="console"></div>
