--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
       <div id="jsConsole" class="console"></div>
     </div>
     <div class="input-container">
-  <textarea id="inputField" placeholder="Enter code here..."></textarea>
-  <button id="executeBtn">Execute Code</button>
-  <button id="clearBtn">Clear Console</button>
-  <button id="exportBtn">Export Log</button>
-  <button id="themeBtn">Toggle Theme</button>
-  <button id="launcherBtn">Launcher</button>
-  <button id="installBtn">Install App</button>
-  <div id="autocomplete"></div>
-</div>
+      <textarea id="inputField" placeholder="Enter code here..."></textarea>
+      <button id="executeBtn">Execute Code</button>
+      <button id="clearBtn">Clear Console</button>
+      <button id="exportBtn">Export Log</button>
+      <button id="themeBtn">Toggle Theme</button>
+      <button id="installBtn">Install App</button>
+      <button id="launcherBtn">Launcher</button> <!-- New button -->
+      <div id="autocomplete"></div>
+    </div>
   </div>
   <canvas id="gameCanvas" width="400" height="400"></canvas>
   <script src="/JS-Console/js/utils.js"></script>
